--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,13 +1,13 @@
-name : CI
+name: CI
 
 on:
   push:
     branches:
       - main
-  paths-ignore:
-      - 'README.md'
-      - 'helm/**
-      
+    paths-ignore:
+      - "README.md"
+      - "helm/**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,14 +19,14 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.25'
+          go-version: "1.22"
 
-      - name : Build 
-        run : go build -o go-web-app
-      
-      - name : Run tests
-        run : go test ./...
-  
+      - name: Build
+        run: go build -o go-web-app
+
+      - name: Run tests
+        run: go test ./...
+
   code-quality:
     runs-on: ubuntu-latest
 
@@ -38,16 +38,14 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.59.2
-  
+
   push:
     runs-on: ubuntu-latest
-
     needs: build
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -62,29 +60,29 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile  
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/go-web-app:${{github.run_id}}
-    
-    update-newtag-in-helm-chart:
-      runs-on: ubuntu-latest
 
-      needs: push
+  update-newtag-in-helm-chart:
+    runs-on: ubuntu-latest
+    needs: push
 
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
-          with:
-            token: ${{ secrets.TOKEN}}
-        - name: Update tag in Helm Chart
-          run: |
-            NEW_TAG=${{ github.run_id }}
-            sed -i "s/tag: .*/tag: \"$NEW_TAG\"/" helm/go-web-app-chart/values.yaml
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
 
-        - name: Update Helm Chart with new image tag
-          run: |
-            git config --global user.name Jaisheesh-2006'
-            git config --global user.email jaicodes2006@gmail.com'
-            git add helm/go-web-app/values.yaml
-            git commit -m "Update Helm chart with new image tag $NEW_TAG"
-            git push origin HEAD:main
+      - name: Update tag in Helm Chart
+        run: |
+          NEW_TAG=${{ github.run_id }}
+          sed -i "s/tag: .*/tag: \"$NEW_TAG\"/" helm/go-web-app-chart/values.yaml
+
+      - name: Update Helm Chart with new image tag
+        run: |
+          git config --global user.name 'Jaisheesh-2006'
+          git config --global user.email 'jaicodes2006@gmail.com'
+          git add helm/go-web-app-chart/values.yaml
+          git commit -m "Update Helm chart with new image tag $NEW_TAG"
+          git push origin HEAD:main
