--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           go-version: "1.22"
 
       - name: Build
-        run: go build -o go-web-app
+        run: go build -o go-web-app ./cmd/students-api
 
       - name: Run tests
         run: go test ./...
@@ -34,10 +34,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.22"
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.59.2
+          version: latest
 
   push:
     runs-on: ubuntu-latest
