--- a/helm/go-web-app-chart/values.yaml
+++ b/helm/go-web-app-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: jaisheesh/go-web-app 
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1"
+  tag: "20690870554"
 
 ingress:
   enabled: false
